[package]
name = "zune-opencl"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/etemesi254/zune-image/tree/dev/crates/zune-opencl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tests=[]
[dependencies]
ocl = "0.19.4"
zune-image = { path = "../zune-image" }
zune-core = { path = "../zune-core" }
bytemuck = "1.13.1"

