[package]
name = "zune-psd"
version = "0.5.0-rc0"
edition = "2021"
authors = ["caleb <etemesicaleb@gmail.com>"]
repository = "https://github.com/etemesi254/zune-image/tree/dev/crates/zune-psd"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["psd", "psd-decoder", "decoder"]
categories = ["multimedia::images"]
exclude = ["fuzz/*"]
description = "Photoshop Simple PSD decoder"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
log = ["zune-core/log"]

[dependencies]
zune-core = { path = "../zune-core", version = "^0.5.0-rc0" }
