[package]
name = "zune-python"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zil"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
zune-png = { path = "../zune-png" }
zune-jpeg = { path = "../zune-jpeg" }
zune-image = { path = "../zune-image" }
zune-core = { path = "../zune-core" }
zune-imageprocs = { path = "../zune-imageprocs", features = ["threads", "exif"] }
numpy = "0.20.0"
pyo3-log = "0.9.0"